--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <div class="form-container">
       <h1>Registration</h1>
       <form action="">
+<!------ Your account -->
         <h2>Your account</h2>
         <fieldset>
           <p><label for="username">Username</label><input type="email" id="username"></p>
@@ -25,6 +26,7 @@
           <p><label for="email">E-mail</label><input type="email" id="email" placeholder="example@example.com"></p>
           <p><label for="file">Profile photo</label><input type="file" id="file"></p>
         </fieldset>
+<!------- Personal Data -->
         <h2>Personal Data</h2>
         <fieldset>
           <p><label for="name">First Name</label><input type="text" id="name" disabled></p>
@@ -54,24 +56,27 @@
               </select>
             month</label>
             <label for="year" class="year"><input type="number" id="year" max="2017" min="1900">year</label>
-
           </p>
         </fieldset>
+<!------- Additional -->
         <h2>Additional</h2>
         <fieldset>
           <p><label for="comments" class="comments">Comments</label><textarea placeholder="Yout text here" id="comments"></textarea></p>
         </fieldset>
+<!------- Subscription -->
         <h2>Subscription</h2>
 
         <fieldset>
           <p class="sub-checkbox"><input type="checkbox" id="webskola" name="webskola" value="w" checked><label for="webskola">Webskola news</label></p>
           <p class="sub-checkbox"><input type="checkbox" id="digi" name="digi" value="d"><label for="digi">Digibrand news</label></p>
         </fieldset>
+<!------- Security code -->
           <h2>Security code</h2>
         <fieldset>
           <p><label for="captcha" class="captcha-label" >Please type symbols shown on image</label></p>
           <p class="captcha"><img src="captcha.png" alt="captcha"><input type="text" id="captcha"></p>
         </fieldset>
+<!------- Submit -->
         <button type="submit">Send form</button>
         <!-- <input type="submit"> -->
       </form>
